Closed Bug 1684921 Opened 5 years ago Closed 4 years ago

Column separator moves wrong column

Categories

(Core :: Layout, defect)

Firefox 84
Unspecified
All
defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
thunderbird_esr78 --- unaffected
firefox-esr78 --- unaffected
firefox86 --- wontfix
firefox87 --- wontfix
firefox88 - wontfix
firefox89 --- fixed

People

(Reporter: thee.chicago.wolf, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression, ux-control)

Attachments

(3 files)

Attached video separator-issue.mp4

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:85.0) Gecko/20100101 Firefox/85.0

Steps to reproduce:

I was attempting to adjust my date and subject column width.

Actual results:

When I grabbed and held the separator between name and subject columns, the date column moved/adjusted instead of the subject column (see video).

Expected results:

It shouldn't move other columns

Component: Untriaged → Folder and Message Lists

I can reproduce in Daily using the same column configuration.

If I reorder them to Subject, From, Date, the Subject and Date columns resize. The From column remains static.

Mozilla/5.0 (X11; Linux x86_64; rv:86.0) Gecko/20100101 Thunderbird/86.0a1 Build ID 20210105104218

I'm seeing this also, on Mac with beta 86. Several accounts, but only happening on one inbox (the default account). I have no idea how to reproduce.

I wonder if it is related to occasionally my column selections get reset.

OS: Unspecified → All
See Also: → 1651940

this goes away in 86 if browser.tabs.remote.autostart is set to false.

(In reply to klaus from comment #3)

this goes away in 86 if browser.tabs.remote.autostart is set to false.

This didn't work for me.

I've been seeing this, but only in the last few months.
Aleca indicates this is a core issue, and to be resolved in Thunderbird will require moving to different code.

Set up columns as per image and all is still ok.
Restarted, tried various themes, tested on different accounts, enabled/disabled Folder Pane, but I cannot reproduce in 78.8.0

Anje, this bug specifies 85 and up. It is working fine in my 78 as well.

Whilst the version mentioned 85, my comment was just to confirm that it was not being seen in earlier versions as sometimes this information is useful.

I can also reproduce the issue on Firefox86 Windows10.

STR:

  1. Open Library (Ctrl+Shift+O)
  2. Reorder columns by dragging and dropping. i.e., "Name | Location | Tag"
  3. Try to change the column width by dragging the separators.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2109cb4b5529c4a82279f6fc73bc40eccc06f132&tochange=d26e05828f37b8229ae9eb88fed03c61ed389ef1

Component: Folder and Message Lists → Layout
Product: Thunderbird → Core
Regressed by: 1411372
Version: Thunderbird 85 → Firefox 84
Has Regression Range: --- → yes

[Tracking Requested - why for this release]: Broken UI

IIUC, this only affects Thunderbird, so not tracking for Firefox. I'll take a low-risk fix for uplift if we get one, though.

See Also: → 1700486

It affects FF as well as per comment 9 right?

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ccf4f852042 Fix some missing sorts in xul tree / splitter code. r=TYLin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/43b719c60744 Factor the "find prev/next sibling accounting for box ordinal", and fix a missing use of it. r=TYLin
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: