Bug 1684921 - Fix some missing sorts in xul tree / splitter code. r=TYLin

I missed those in bug 1411372. Custom hit-testing code, yay.

Differential Revision: https://phabricator.services.mozilla.com/D110429